renamed test framework `command` element to `run`... changed all docs and tests

--- a/docs/ideas/run-env-unit-test-ideas.yaml
+++ b/docs/ideas/run-env-unit-test-ideas.yaml
@@ -1,5 +1,5 @@
 - name: Run Environment Variable Unit Tests
-  command: cycodt run --file env-simple-tests.yaml
+  run: cycodt run --file env-simple-tests.yaml
   expect-regex: |
     Found \d+ tests...
     
