--- a/tests/cycod-yaml/config-add-different-value-types.yaml
+++ b/tests/cycod-yaml/config-add-different-value-types.yaml
@@ -4,18 +4,18 @@
 #     steps:
 #     # Clean up any existing test lists
 #     - name: Clean up test list
-#       command: cycod config clear TypeTestList --any
+#       run: cycod config clear TypeTestList --any
 #       skipOnFailure: true
     
 #     # Test adding string values
 #     - name: Add string value to list
-#       command: cycod config add TypeTestList "SimpleString"
+#       run: cycod config add TypeTestList "SimpleString"
 #       expect-regex: |
 #         TypeTestList:
 #         - SimpleString
     
 #     - name: Add quoted string with spaces to list
-#       command: cycod config add TypeTestList "String with spaces"
+#       run: cycod config add TypeTestList "String with spaces"
 #       expect-regex: |
 #         TypeTestList:
 #         - SimpleString
@@ -23,7 +23,7 @@
     
 #     # Test adding numeric values
 #     - name: Add integer value to list
-#       command: cycod config add TypeTestList 42
+#       run: cycod config add TypeTestList 42
 #       expect-regex: |
 #         TypeTestList:
 #         - SimpleString
@@ -31,7 +31,7 @@
 #         - 42
     
 #     - name: Add decimal value to list
-#       command: cycod config add TypeTestList 3.14
+#       run: cycod config add TypeTestList 3.14
 #       expect-regex: |
 #         TypeTestList:
 #         - SimpleString
@@ -41,7 +41,7 @@
     
 #     # Test adding boolean values
 #     - name: Add boolean true value to list
-#       command: cycod config add TypeTestList true
+#       run: cycod config add TypeTestList true
 #       expect-regex: |
 #         TypeTestList:
 #         - SimpleString
@@ -51,7 +51,7 @@
 #         - true
     
 #     - name: Add boolean false value to list
-#       command: cycod config add TypeTestList false
+#       run: cycod config add TypeTestList false
 #       expect-regex: |
 #         TypeTestList:
 #         - SimpleString
@@ -63,7 +63,7 @@
     
 #     # Test retrieving the mixed-type list
 #     - name: Get the mixed-type list
-#       command: cycod config get TypeTestList
+#       run: cycod config get TypeTestList
 #       expect-regex: |
 #         LOCATION: .*\\\.cycod\\config\.yaml \(.*\)
 #         TypeTestList:
@@ -76,25 +76,25 @@
     
 #     # Clean up
 #     - name: Clean up the test list
-#       command: cycod config clear TypeTestList
+#       run: cycod config clear TypeTestList
 #       expect-regex: |
 #         TypeTestList: \(cleared\)
   
 #   - name: Adding special values to list
 #     steps:
 #     - name: Clean up test list
-#       command: cycod config clear SpecialTestList --any
+#       run: cycod config clear SpecialTestList --any
 #       skipOnFailure: true
     
 #     # Test adding values that might be treated specially
 #     - name: Add empty string to list
-#       command: cycod config add SpecialTestList ""
+#       run: cycod config add SpecialTestList ""
 #       expect-regex: |
 #         SpecialTestList:
 #         - 
     
 #     - name: Add zero value to list
-#       command: cycod config add SpecialTestList 0
+#       run: cycod config add SpecialTestList 0
 #       expect-regex: |
 #         SpecialTestList:
 #         - 
@@ -102,7 +102,7 @@
     
 #     # Clean up
 #     - name: Clean up special test list
-#       command: cycod config clear SpecialTestList
+#       run: cycod config clear SpecialTestList
 #       expect-regex: |
 #         SpecialTestList: \(cleared\)
 
