--- a/tests/cycodt-yaml/cycodt-expect-check-tests.yaml
+++ b/tests/cycodt-yaml/cycodt-expect-check-tests.yaml
@@ -3,14 +3,14 @@ tag: cycodt
 tests:
 
 - name: regex success
-  command: cycodt expect check --regex Hi
+  run: cycodt expect check --regex Hi
   input: Hi
   expect-regex: |
     ^Checking expectations\.\.\.\r?$\n
     ^Checking expectations\.\.\. PASS!\r?$\n
 
 - name: regex failed
-  command: cycodt expect check --regex Hiz
+  run: cycodt expect check --regex Hiz
   input: Hi
   expect-exit-code: 1
   expect-regex: |
