--- a/tests/cycodt-yaml/inception-layer-1-tests/test-cycodt-expect-exit-code.yaml
+++ b/tests/cycodt-yaml/inception-layer-1-tests/test-cycodt-expect-exit-code.yaml
@@ -2,7 +2,7 @@ class: expect-exit-code-tests
 tag: inception
 tests:
 - name: cycodt run --file simple4.yaml
-  command: cycodt run --file simple4.yaml --include-optional check-expect-exit-code
+  run: cycodt run --file simple4.yaml --include-optional check-expect-exit-code
   expect-exit-code: 1
   expect-regex: |
     ^Found 4 tests\.\.\.\r?$\n
