--- a/tests/cycodt-yaml/inception-layer-1-tests/test-cycodt-list.yaml
+++ b/tests/cycodt-yaml/inception-layer-1-tests/test-cycodt-list.yaml
@@ -2,27 +2,27 @@ class: output-tests
 tag: inception
 tests:
 - name: cycodt list
-  command: cycodt list --file simple.yaml
+  run: cycodt list --file simple.yaml
   expect-regex: |
     yaml.simple.simple.running simple process
     Found 1 test...
 
 - name: cycodt list w/optional windows
-  command: cycodt list --files simple.yaml --include-optional windows
+  run: cycodt list --files simple.yaml --include-optional windows
   expect-regex: |
     yaml.simple.simple.running simple process
     yaml.simple.simple.running simple script w/ regex expectation
     Found 2 tests...
 
 - name: cycodt list w/optional linux
-  command: cycodt list --files simple.yaml --include-optional linux
+  run: cycodt list --files simple.yaml --include-optional linux
   expect-regex: |
     yaml.simple.simple.running simple process
     yaml.simple.simple.running bash script w/ regex expectation
     Found 2 tests...
     
 - name: cycodt list w/optional all
-  command: cycodt list --files simple.yaml --include-optional
+  run: cycodt list --files simple.yaml --include-optional
   expect-regex: |
     yaml.simple.simple.running simple process
     yaml.simple.simple.running simple script w/ regex expectation
@@ -30,13 +30,13 @@ tests:
     Found 3 tests...
 
 - name: cycodt list all files, excluding simple2 and simple3
-  command: cycodt list --files simple*yaml --exclude-files simple2.yaml simple3.yaml
+  run: cycodt list --files simple*yaml --exclude-files simple2.yaml simple3.yaml
   expect-regex: |
     yaml.simple.simple.running simple process
     Found 1 test...
 
 - name: cycodt list all files, verbosely
-  command: cycodt list --files simple*.yaml --include-optional --verbose
+  run: cycodt list --files simple*.yaml --include-optional --verbose
   expect-regex: |
     ^.*[\\/]tests[\\/]cycodt-yaml[\\/]inception-layer-1[\\/]simple.yaml\r?$\n
     ^\r?$\n
