--- a/tests/cycodt-yaml/inception-layer-1/simple.yaml
+++ b/tests/cycodt-yaml/inception-layer-1/simple.yaml
@@ -1,7 +1,7 @@
 ﻿class: simple
 tests:
 - name: running simple process
-  command: cycod version
+  run: cycod version
 
 - name: running simple script w/ regex expectation
   script: echo hello
