--- a/tests/cycod-yaml/config-remove-different-scopes.yaml
+++ b/tests/cycod-yaml/config-remove-different-scopes.yaml
@@ -4,21 +4,21 @@
 #     steps:
 #     # Set up test lists in different scopes
 #     - name: Clear test lists in all scopes
-#       command: cycod config clear ScopedRemoveList --any
+#       run: cycod config clear ScopedRemoveList --any
 #       skipOnFailure: true
     
 #     # Create lists with multiple items in each scope
 #     - name: Create list in local scope
-#       command: cycod config add ScopedRemoveList LocalItem1 --local
+#       run: cycod config add ScopedRemoveList LocalItem1 --local
 #       expect-regex: |
 #         ScopedRemoveList:
 #         - LocalItem1
-#     - command: cycod config add ScopedRemoveList LocalItem2 --local
+#     - run: cycod config add ScopedRemoveList LocalItem2 --local
 #       expect-regex: |
 #         ScopedRemoveList:
 #         - LocalItem1
 #         - LocalItem2
-#     - command: cycod config add ScopedRemoveList CommonItem --local
+#     - run: cycod config add ScopedRemoveList CommonItem --local
 #       expect-regex: |
 #         ScopedRemoveList:
 #         - LocalItem1
@@ -26,16 +26,16 @@
 #         - CommonItem
     
 #     - name: Create list in user scope
-#       command: cycod config add ScopedRemoveList UserItem1 --user
+#       run: cycod config add ScopedRemoveList UserItem1 --user
 #       expect-regex: |
 #         ScopedRemoveList:
 #         - UserItem1
-#     - command: cycod config add ScopedRemoveList UserItem2 --user
+#     - run: cycod config add ScopedRemoveList UserItem2 --user
 #       expect-regex: |
 #         ScopedRemoveList:
 #         - UserItem1
 #         - UserItem2
-#     - command: cycod config add ScopedRemoveList CommonItem --user
+#     - run: cycod config add ScopedRemoveList CommonItem --user
 #       expect-regex: |
 #         ScopedRemoveList:
 #         - UserItem1
@@ -43,16 +43,16 @@
 #         - CommonItem
     
 #     - name: Create list in global scope
-#       command: cycod config add ScopedRemoveList GlobalItem1 --global
+#       run: cycod config add ScopedRemoveList GlobalItem1 --global
 #       expect-regex: |
 #         ScopedRemoveList:
 #         - GlobalItem1
-#     - command: cycod config add ScopedRemoveList GlobalItem2 --global
+#     - run: cycod config add ScopedRemoveList GlobalItem2 --global
 #       expect-regex: |
 #         ScopedRemoveList:
 #         - GlobalItem1
 #         - GlobalItem2
-#     - command: cycod config add ScopedRemoveList CommonItem --global
+#     - run: cycod config add ScopedRemoveList CommonItem --global
 #       expect-regex: |
 #         ScopedRemoveList:
 #         - GlobalItem1
@@ -61,7 +61,7 @@
     
 #     # Test removing items from local scope list
 #     - name: Remove item from local scope list
-#       command: cycod config remove ScopedRemoveList LocalItem1 --local
+#       run: cycod config remove ScopedRemoveList LocalItem1 --local
 #       expect-regex: |
 #         ScopedRemoveList:
 #         - LocalItem2
@@ -69,7 +69,7 @@
     
 #     # Verify removal was limited to local scope
 #     - name: Verify local scope list after removal
-#       command: cycod config get ScopedRemoveList --local
+#       run: cycod config get ScopedRemoveList --local
 #       expect-regex: |
 #         LOCATION: .*\\\.cycod\\config\.yaml \(local\)
 #         ScopedRemoveList:
@@ -78,7 +78,7 @@
     
 #     # Verify user and global lists were not affected
 #     - name: Verify user scope list is unaffected
-#       command: cycod config get ScopedRemoveList --user
+#       run: cycod config get ScopedRemoveList --user
 #       expect-regex: |
 #         LOCATION: .*\\\.cycod\\config\.yaml \(user\)
 #         ScopedRemoveList:
@@ -87,7 +87,7 @@
 #           - CommonItem
     
 #     - name: Verify global scope list is unaffected
-#       command: cycod config get ScopedRemoveList --global
+#       run: cycod config get ScopedRemoveList --global
 #       expect-regex: |
 #         LOCATION: .*\\\.cycod\\config\.yaml \(global\)
 #         ScopedRemoveList:
@@ -97,7 +97,7 @@
     
 #     # Test removing items from user scope list
 #     - name: Remove item from user scope list
-#       command: cycod config remove ScopedRemoveList UserItem1 --user
+#       run: cycod config remove ScopedRemoveList UserItem1 --user
 #       expect-regex: |
 #         ScopedRemoveList:
 #         - UserItem2
@@ -105,7 +105,7 @@
     
 #     # Test removing items from global scope list
 #     - name: Remove item from global scope list
-#       command: cycod config remove ScopedRemoveList GlobalItem1 --global
+#       run: cycod config remove ScopedRemoveList GlobalItem1 --global
 #       expect-regex: |
 #         ScopedRemoveList:
 #         - GlobalItem2
@@ -113,14 +113,14 @@
     
 #     # Test removing "CommonItem" from each scope independently
 #     - name: Remove common item from local scope
-#       command: cycod config remove ScopedRemoveList CommonItem --local
+#       run: cycod config remove ScopedRemoveList CommonItem --local
 #       expect-regex: |
 #         ScopedRemoveList:
 #         - LocalItem2
     
 #     # Verify it only affected local scope
 #     - name: Verify common item still exists in user scope
-#       command: cycod config get ScopedRemoveList --user
+#       run: cycod config get ScopedRemoveList --user
 #       expect-regex: |
 #         LOCATION: .*\\\.cycod\\config\.yaml \(user\)
 #         ScopedRemoveList:
@@ -129,12 +129,12 @@
     
 #     # Test removing the last item from a list
 #     - name: Remove last item from local list
-#       command: cycod config remove ScopedRemoveList LocalItem2 --local
+#       run: cycod config remove ScopedRemoveList LocalItem2 --local
 #       expect-regex: |
 #         ScopedRemoveList:
 #         \[\]
     
 #     # Clean up
 #     - name: Clean up test lists in all scopes
-#       command: cycod config clear ScopedRemoveList --any
+#       run: cycod config clear ScopedRemoveList --any
 #       skipOnFailure: true
