--- a/tests/cycod-yaml/cycod-slash-commands.yaml
+++ b/tests/cycod-yaml/cycod-slash-commands.yaml
@@ -2,7 +2,7 @@ class: slash-commands
 tag: cycod
 tests:
 - name: /file README.md
-  command: cycod --input "/file README.md" --input exit
+  run: cycod --input "/file README.md" --input exit
   workingDirectory: testfiles
   expect-regex: |
     ^\r?$\n
@@ -25,7 +25,7 @@ tests:
     ^User: exit\r?$\n
 
 - name: /files README.md
-  command: cycod --input "/files README.md" --input exit
+  run: cycod --input "/files README.md" --input exit
   workingDirectory: testfiles
   expect-regex: |
     ^\r?\n
@@ -48,7 +48,7 @@ tests:
     ^User: exit\r?$\n
 
 - name: /find README.md
-  command: cycod --input "/find README.md" --input exit
+  run: cycod --input "/find README.md" --input exit
   workingDirectory: testfiles
   expect-regex: |
     ^\r?\n
@@ -71,7 +71,7 @@ tests:
     ^User: exit\r?$\n
 
 - name: /run echo hi
-  command: cycod --input "/run echo hi" --input exit
+  run: cycod --input "/run echo hi" --input exit
   workingDirectory: testfiles
   expect-regex: |
     ^\r?$\n
