--- a/tests/cycodt-yaml/run-command-arguments-tests.yaml
+++ b/tests/cycodt-yaml/run-command-arguments-tests.yaml
@@ -2,7 +2,7 @@ class: process-args
 tag: cycod
 tests:
 - name: /file README.md
-  command: cycod
+  run: cycod
   workingDirectory: testfiles
   arguments:
     input: /file README.md
@@ -28,7 +28,7 @@ tests:
     ^User: exit\r?$\n
 
 - name: /file README.md 2
-  command: cycod
+  run: cycod
   workingDirectory: testfiles
   arguments:
     - input: "/file README.md"
